{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 16,
  "lineage": "cd2ae86f-e1b7-bd4f-2862-1cf4c6e12070",
  "resources": [
    {
      "module": "module.vpc_lab",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00bc95a199d1a7147",
            "arn": "arn:aws:ec2:us-east-1:433690948925:elastic-ip/eipalloc-00bc95a199d1a7147",
            "association_id": "eipassoc-05b8f785eda707fa7",
            "domain": "vpc",
            "id": "eipalloc-00bc95a199d1a7147",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b6a13bdf02f3e562",
            "private_dns": "ip-10-0-1-87.ec2.internal",
            "private_ip": "10.0.1.87",
            "public_dns": "ec2-34-227-55-253.compute-1.amazonaws.com",
            "public_ip": "34.227.55.253",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc_lab",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:433690948925:internet-gateway/igw-0ff5af9d860c5969e",
            "id": "igw-0ff5af9d860c5969e",
            "owner_id": "433690948925",
            "vpc_id": "vpc-03ebf877cabdf04d7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_lab.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_lab",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00bc95a199d1a7147",
            "association_id": "eipassoc-05b8f785eda707fa7",
            "connectivity_type": "public",
            "id": "nat-0d2f701554d3d6765",
            "network_interface_id": "eni-0b6a13bdf02f3e562",
            "private_ip": "10.0.1.87",
            "public_ip": "34.227.55.253",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0466debb1c105e5e5",
            "tags": {
              "Name": "nat-gateway"
            },
            "tags_all": {
              "Name": "nat-gateway"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_lab.aws_eip.nat",
            "module.vpc_lab.aws_subnet.public",
            "module.vpc_lab.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_lab",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c0c96677499af50a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d2f701554d3d6765",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c0c96677499af50a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_lab.aws_eip.nat",
            "module.vpc_lab.aws_nat_gateway.main",
            "module.vpc_lab.aws_route_table.private",
            "module.vpc_lab.aws_subnet.public",
            "module.vpc_lab.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_lab",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:433690948925:route-table/rtb-0c0c96677499af50a",
            "id": "rtb-0c0c96677499af50a",
            "owner_id": "433690948925",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d2f701554d3d6765",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-privada"
            },
            "tags_all": {
              "Name": "rt-privada"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ebf877cabdf04d7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_lab.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_lab",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:433690948925:route-table/rtb-018b32c7bbc5fe81d",
            "id": "rtb-018b32c7bbc5fe81d",
            "owner_id": "433690948925",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ff5af9d860c5969e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03ebf877cabdf04d7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_lab.aws_internet_gateway.main",
            "module.vpc_lab.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_lab",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02901c69523fdac3f",
            "route_table_id": "rtb-0c0c96677499af50a",
            "subnet_id": "subnet-0fda7814f38f2fdc1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_lab.aws_route_table.private",
            "module.vpc_lab.aws_subnet.private",
            "module.vpc_lab.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_lab",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b83a2404b84f76a5",
            "route_table_id": "rtb-018b32c7bbc5fe81d",
            "subnet_id": "subnet-0466debb1c105e5e5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_lab.aws_internet_gateway.main",
            "module.vpc_lab.aws_route_table.public",
            "module.vpc_lab.aws_subnet.public",
            "module.vpc_lab.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_lab",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:433690948925:subnet/subnet-0fda7814f38f2fdc1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fda7814f38f2fdc1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "433690948925",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-privada"
            },
            "tags_all": {
              "Name": "subnet-privada"
            },
            "vpc_id": "vpc-03ebf877cabdf04d7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_lab.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_lab",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:433690948925:subnet/subnet-0466debb1c105e5e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0466debb1c105e5e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "433690948925",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-publica"
            },
            "tags_all": {
              "Name": "subnet-publica"
            },
            "vpc_id": "vpc-03ebf877cabdf04d7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_lab.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_lab",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:433690948925:vpc/vpc-03ebf877cabdf04d7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07292a100460f8b4c",
            "default_route_table_id": "rtb-05fe7fd20c43b84d5",
            "default_security_group_id": "sg-00822b573acf1ca9c",
            "dhcp_options_id": "dopt-0f73ef27aa98e6404",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03ebf877cabdf04d7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05fe7fd20c43b84d5",
            "owner_id": "433690948925",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}